# 1brc

./: .gitignore  README.md  create_measurements.py
go/: test.sh
go/baseline/: baseline.go  baseline_test.go  go.mod
go/chunked/: chunked.go  go.mod
go/custom_hash/: custom_hash.go  custom_hash_test.go  go.mod  hash.go  hash_test.go
go/fast_parse/: fast_parse.go  go.mod
rust/: Cargo.toml  README.md  test.sh  tocsv.sh
rust/onebrc_baseline/: Cargo.toml
rust/onebrc_baseline/benches/: my_benchmark.rs
rust/onebrc_baseline/src/: lib.rs  main.rs
rust/onebrc_memmapped/: Cargo.toml
rust/onebrc_memmapped/benches/: my_benchmark.rs
rust/onebrc_memmapped/src/: lib.rs  main.rs  main.rs.bak
rust/onebrc_rayon/: Cargo.toml
rust/onebrc_threaded/: Cargo.toml  measurments.txt
rust/onebrc_threaded/benches/: my_benchmark.rs
rust/onebrc_threaded/src/: lib.rs  main.rs
rust/onebrc_tokio/: Cargo.toml
rust/onebrc_tokio/src/: main.rs
